app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  annotations:
      prometheus.io/port: "metrics"
      prometheus.io/scrape: "true" 
  labels:
    app: flask-app        
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
